--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@vercel/analytics": "^1.3.1",
+    "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
