--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@repo/ui": "*",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
