--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.3",
     "@repo/ui": "*",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
