--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "inngest": "^3.22.6",
     "lucide-react": "^0.429.0",
     "next": "14.2.5",
     "react": "^18",
