--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@repo/ui": "*",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
