--- a/package.json
+++ b/package.json
@@ -3,22 +3,15 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx}\""
+    "dev": "turbo dev --parallel",
+    "test": "turbo test --parallel",
+    "format": "biome format --write .",
+    "lint": "biome lint --write ."
   },
+  "workspaces": ["apps/*", "packages/*"],
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
-    "prettier": "^3.3.3",
-    "turbo": "^2.0.14",
-    "typescript": "^5.5.4"
+    "@biomejs/biome": "^1.9.4",
+    "turbo": "^2.2.3"
   },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.1.26",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "packageManager": "yarn@1.22.22"
 }
