SC-13 SC-28 feat/refactor: move tsconfig to tooling folder, add jobs package and implement luma labs

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@saleclips/ui": "*",
     "geist": "^1.3.1",
+    "next": "15.0.1",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
