--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,11 +9,15 @@
     "test": "bun test ."
   },
   "dependencies": {
+    "@saleclips/jobs": "*",
     "@saleclips/ui": "*",
+    "@trigger.dev/sdk": "^3.1.0",
     "geist": "^1.3.1",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.1",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
